Activate user route
